ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    #ingress.kubernetes.io/ssl-redirect: "true"
    #cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "16m"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
  labels:
    type: ingress
spec:
  tls:
    - hosts:
      - $URL
      secretName: letsencrypt-prod-$URL
  rules:
    - host: $URL
      http:
        paths:
        - pathType: ImplementationSpecific
          backend:
            service:
              name: hello
              port:
                number: 80
